test/expected/explain_ub.out
explain unsigned bool x
        ^
9: error: "unsigned _Bool" is illegal for built-in type
